jacoco fix 2 - update to latest version